# syslog-wrapper

./: .gitignore  Cargo.toml  LICENSE  README.md  test-server.sh  test.sh
.github/workflows/: build.yml
src/: main.rs  sender.rs
tests/: basic_test.rs
