[package]
name = "syslog-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.20.6"
webpki-roots = "0.22.4"
webpki = "0.22.0"
rustls-pemfile = "1.0.1"
clap = { version = "3.2.18", features = ["derive", "env", "cargo"] }
gethostname = "0.2.3"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
retry = "1.3.1"

[dev-dependencies]
assert_cli = "0.6.3"
